@@ -27,9 +27,10 @@ import org.pentaho.platform.engine.core.system.PentahoSystem;
 
 import java.io.FileOutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 
 /**
@@ -49,17 +50,20 @@ public class MetaverseReaderIT {
   }
 
   @AfterClass
-  public static void cleanUp() throws Exception {
+  public static void cleanUp() {
     IntegrationTestUtil.shutdownPentahoSystem();
   }
 
   @Test
   public void testSearch() throws Exception {
-    List<String> whatWeAreLookingFor = new ArrayList<String>( Arrays.asList( DictionaryConst.NODE_TYPE_TRANS ) );
-    List<IMetaverseNode> nodes = reader.findNodes( DictionaryConst.PROPERTY_TYPE, DictionaryConst.NODE_TYPE_DATA_COLUMN );
-    List<String> startingPoint = new ArrayList<String>( Arrays.asList( nodes.get( 0 ).getStringID() ) );
+    List<String> whatWeAreLookingFor = new ArrayList<>( List.of( DictionaryConst.NODE_TYPE_TRANS ) );
+    List<IMetaverseNode> nodes =
+      reader.findNodes( DictionaryConst.PROPERTY_TYPE, DictionaryConst.NODE_TYPE_TRANS_STEP );
+    assertFalse(nodes.isEmpty());
 
-    System.out.println( "Looking for Transformations that write/read Database Column " + nodes.get( 0 ).getName() );
+    List<String> startingPoint = new ArrayList<>( Collections.singletonList( nodes.get( 0 ).getStringID() ) );
+
+    System.out.println( "Looking for Transformations containing Transformation Step " + nodes.get( 0 ).getName() );
 
     Graph g = reader.search( whatWeAreLookingFor, startingPoint, false );
 
